--- a/html_components/header.html
+++ b/html_components/header.html
@@ -1,5 +1,10 @@
 <div class="main_menu" style="background-color: #9DD2EA;text-align: center;"> 
-    <h1 style="color: white;margin-left: 20px; margin-top: 10px;">
-        Chuck-A-Luck
+    <h1 style="color: white; margin-top: 10px;text-align: left;margin-left: 20px;">
+        <a href="#!/" id = "gameTitle">
+            Chuck-A-Luck
+        </a>
+        <a href = "#!/help">
+            <i class="fa fa-question-circle" style="font-size:48px;color:black; float:right; margin-right: 20px;"></i>
+        </a>
     </h1>
 </div>
