--- a/index.html
+++ b/index.html
@@ -28,19 +28,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.8/interact.min.js"></script>
         <script src="./main.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-        <!-- Include UI Bootstrap library -->
-        <script src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
-        <!-- Include Bootstrap CSS CDN link -->
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <header data-ng-include="'html_components/header.html'"
         style="height:50px;">
 
         </header>
 
-        <main data-ng-view id='mainContent' style="
-        margin-top: -40px;
-        margin-bottom: -60px;
-        overflow-x: hidden;" ></main>
+        <main data-ng-view id='mainContent'></main>
         
         
         <footer data-ng-include="'html_components/footer.html'" 
