--- a/html_components/checkLuck.html
+++ b/html_components/checkLuck.html
@@ -29,18 +29,19 @@ overflow-x: hidden;" >
             Choose a card
         </div>
         <div class = "container" id="choices">
-            <div id="box1" class="row box" ng-click = 'boxClicked(1)'>
-                <p id = "value1" class="value">
-                </p>
-            </div>
-            <div id="box2" class="row box" ng-click = 'boxClicked(2)'>
+            <button id="box1" class="row box" ng-click = 'boxClicked(1)' ng-disabled='disable'>
+                
+                    <p id = "value1" class="value">
+                    </p>
+            </button>
+            <button id="box2" class="row box" ng-click = 'boxClicked(2)' ng-disabled='disable'>
                 <p id = "value2" class="value">
                 </p>
-            </div>
-            <div id="box3" class="row box" ng-click = 'boxClicked(3)'>
+            </button>
+            <button id="box3" class="row box" ng-click = 'boxClicked(3)' ng-disabled='disable'>
                 <p id = "value3" class="value">
                 </p>
-            </div>
+            </button>
         </div>
         <div id="nextFinish">
             <button class = "btn btn-primary" id = "nextButton" ng-click="Next()"> 
